front page update

--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -84,7 +84,7 @@
 
 <section class="hm-banner-slider-sec">
   <div class="hm-banner-slider">
-    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.png')">
+    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.jpg')">
       <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
@@ -106,7 +106,7 @@
         </div>
       </div>    
     </div>
-    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.png')">
+    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.jpg')">
       <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
@@ -122,7 +122,7 @@
         </div>
       </div>    
     </div>
-    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.png')">
+    <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.jpg')">
       <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
@@ -144,7 +144,7 @@
         </div>
       </div>    
     </div>
-    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.png')">
+    <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.jpg')">
       <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
@@ -160,12 +160,12 @@
         </div>
       </div>    
     </div>
-
-  </div>      
+  </div>
+  <a href="#hm-wc-social-assets-sec" class="hm-bnr-scroll"><img src="assets/images/hm-bnr-scroll.png" alt=""></a>  
 </section>
 
 
-<section class="hm-wc-social-assets-sec ">
+<section class="hm-wc-social-assets-sec " id="hm-wc-social-assets-sec">
   <div class="hm-wc-social-assets-top">
     <div class="container">
       <div class="row">
@@ -182,6 +182,7 @@
     <span class="hm-wc-social-assets-top-shape"></span>      
   </div>  
 </section>
+
 
 <section class="join-journey-section hm-join-journey-sec">
   <div class="container-xlg">
@@ -237,31 +238,21 @@
 </section>
 
 
-<section class="wwd-user-section hm-wwd-user-sec">
+<section class="hm-user-support-sec">
   <div class="container-xlg">
     <div class="row">
       <div class="col-sm-12">
-        <div class="wwd-user-sec-inner">
-          <div class="wwd-user-sec-img" style="background: url('assets/images/wwd-user-sec-img.png');">
-            
-          </div>
-          <div class="wwd-user-sec-rgt">
-            <div class="wwd-user-sec-rgt-inner">
-              <div class="wwd-user-sec-rgt-des">
-                <h3>For Users</h3>
-                <p>Access certified courses and <br> publications related to your field</p>
-                <a href="#">SUPPORT A CAMPAIGN <i><img src="assets/images/wwd-right.png"></i></a>
-              </div>
-            </div>
+        <div class="hm-user-support-inner" style="background: url('assets/images/hm-user-support-bg.jpg');">
+          <div class="hm-user-support-rgt-des">
+            <h3>For Users</h3>
+            <p>Access certified courses and <br> publications related to your field</p>
+            <a href="#">SUPPORT A CAMPAIGN</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-
-
 
 
 <section class="hm-explore-campaigns-sec">
@@ -271,50 +262,61 @@
         <div class="hm-explore-campaigns-innr text-center">
           <ul class="ulc clearfix">
             <li>
-              <div class="hm-explore-campaigns-con" style="background: url(assets/images/m-explore-campaigns-bg-1.png)">
+              <div class="hm-explore-campaigns-con">
+                <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-1.png)"></div>
                 <div class="hm-explore-campaigns-des">
                   <strong>Environment <br>Campaigns</strong>
                   <span>12 opened</span>
                 </div>
+                <a class="overlay-link" href="#"></a>
               </div>
             </li>
             <li>
-              <div class="hm-explore-campaigns-con" style="background: url(assets/images/m-explore-campaigns-bg-2.png)">
+              <div class="hm-explore-campaigns-con">
+                <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-2.png)"></div>
                 <div class="hm-explore-campaigns-des">
                   <strong>Animal Planet <br>Campaigns</strong>
                   <span>6 opened</span>
                 </div>
+                <a class="overlay-link" href="#"></a>
               </div>
             </li>
             <li>
-              <div class="hm-explore-campaigns-con" style="background: url(assets/images/m-explore-campaigns-bg-3.png)">
+              <div class="hm-explore-campaigns-con">
+                <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-3.png)"></div>
                 <div class="hm-explore-campaigns-des">
                   <strong>Human <br>Campaigns</strong>
                   <span>32 opened</span>
                 </div>
+                <a class="overlay-link" href="#"></a>
               </div>
             </li>
             <li class="w-50">
-              <div class="hm-explore-campaigns-con" style="background: url(assets/images/m-explore-campaigns-bg-4.png)">
+              <div class="hm-explore-campaigns-con">
+                <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-4.png)"></div>
                 <div class="hm-explore-campaigns-des">
                   <strong>Health <br>Campaigns</strong>
                   <span>12 opened</span>
                 </div>
+                <a class="overlay-link" href="#"></a>
               </div>
             </li>
             <li class="w-50">
-              <div class="hm-explore-campaigns-con" style="background: url(assets/images/m-explore-campaigns-bg-5.png)">
+              <div class="hm-explore-campaigns-con">
+                <div class="hm-explore-campaigns-con-bg" style="background: url(assets/images/m-explore-campaigns-bg-5.png)"></div>
                 <div class="hm-explore-campaigns-des">
                   <strong>Education <br>Campaigns</strong>
                   <span>No opened yet</span>
                 </div>
+                <a class="overlay-link" href="#"></a>
               </div>
             </li>
           </ul>
-
-          <a class="hm-explore-btn" href="#">EXPLORE ALL CAMPAIGNS</a>
-          <br>
-          <a class="hm-campaign-btn" href="#">START A CAMPAIGN</a>
+          <div class="hm-explore-campaigns-link">
+            <a class="hm-explore-btn" href="#">EXPLORE ALL CAMPAIGNS</a>
+            <br>
+            <a class="hm-campaign-btn" href="#">START A CAMPAIGN</a>  
+          </div>
         </div>
       </div>
     </div>
@@ -333,7 +335,7 @@
             <p>Here’re what our clients have to say about our services</p>
           </div>
 
-          <div class="hm-testimonials-slider">
+          <div class="hm-testimonials-slider dft-slider-dot-con">
             <div class="hm-testimonials-slider-item">
               <i><img src="assets/images/testimonials-avatar.png" alt=""></i>
               
@@ -368,6 +370,7 @@
               <span class="btm-q-icon">''</span> -->
             </div>
           </div>
+          <span class="hm-testimonials-icon"><img src="assets/images/hm-testimonials-icon.png" alt=""></span>
         </div>
       </div>
     </div>
@@ -384,7 +387,7 @@
             <h4>Companies that use Social Assets</h4>
           </div>
 
-          <div class="hm-partner-slider clearfix">
+          <div class="hm-partner-slider clearfix dft-slider-dot-con">
             <div class="hm-partner-slider-item">
               <i><img src="assets/images/partner-1.png" alt=""></i>
             </div>
