--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -344,8 +344,8 @@
                 <span>Mary M.</span>
                 <strong>Junior Developer</strong>                
               </div>
-              <!-- <span class="top-q-icon">''</span>
-              <span class="btm-q-icon">''</span> -->
+              <span class="top-q-icon"><img src="assets/images/testimonials-top-q-icon.png" alt=""></span>
+              <span class="btm-q-icon"><img src="assets/images/testimonials-btm-q-icon.png" alt=""></span>
             </div>
             <div class="hm-testimonials-slider-item">
               <i><img src="assets/images/testimonials-avatar.png" alt=""></i>
@@ -355,8 +355,8 @@
                 <span>Mary M.</span>
                 <strong>Junior Developer</strong>                
               </div>
-              <!-- <span class="top-q-icon">''</span>
-              <span class="btm-q-icon">''</span> -->
+              <span class="top-q-icon"><img src="assets/images/testimonials-top-q-icon.png" alt=""></span>
+              <span class="btm-q-icon"><img src="assets/images/testimonials-btm-q-icon.png" alt=""></span>
             </div>
             <div class="hm-testimonials-slider-item">
               <i><img src="assets/images/testimonials-avatar.png" alt=""></i>
@@ -366,8 +366,8 @@
                 <span>Mary M.</span>
                 <strong>Junior Developer</strong>                
               </div>
-              <!-- <span class="top-q-icon">''</span>
-              <span class="btm-q-icon">''</span> -->
+              <span class="top-q-icon"><img src="assets/images/testimonials-top-q-icon.png" alt=""></span>
+              <span class="btm-q-icon"><img src="assets/images/testimonials-btm-q-icon.png" alt=""></span>
             </div>
           </div>
           <span class="hm-testimonials-icon"><img src="assets/images/hm-testimonials-icon.png" alt=""></span>
