--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -85,7 +85,6 @@
 <section class="hm-banner-slider-sec">
   <div class="hm-banner-slider">
     <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.jpg')">
-      <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
       </span>
@@ -93,8 +92,7 @@
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr clearfix">
-              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')">
-              </div>
+              <div class="hm-banner-slider-item-lft-bg hide-sm" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')"></div>
               <div class="hm-banner-slider-item-rgt-des text-white">
                 <span class="actionaid-tag">Actionaid</span>
                 <h4>Clean South Crete</h4>
@@ -107,7 +105,6 @@
       </div>    
     </div>
     <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.jpg')">
-      <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
       </span>
@@ -123,7 +120,6 @@
       </div>    
     </div>
     <div class="hm-banner-slider-item hm-banner-design-1" style="background: url('assets/images/hm-banner-slider-item02.jpg')">
-      <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
       </span>
@@ -131,7 +127,7 @@
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr clearfix">
-              <div class="hm-banner-slider-item-lft-bg" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')">
+              <div class="hm-banner-slider-item-lft-bg hide-sm" style="background: url('assets/images/hm-banner-design-1-lft-bg.png')">
               </div>
               <div class="hm-banner-slider-item-rgt-des text-white">
                 <span class="actionaid-tag">Actionaid</span>
@@ -145,7 +141,6 @@
       </div>    
     </div>
     <div class="hm-banner-slider-item hm-banner-design-2" style="background: url('assets/images/hm-banner-slider-item01.jpg')">
-      <span class="hm-banner-slider-overlay"></span>
       <span class="hm-banner-slider-rb-icon">
         <img src="assets/images/hm-banner-slider-rb-icon.png" alt="">
       </span>
