--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -179,7 +179,7 @@
 </section>
 
 
-<section class="join-journey-section hm-join-journey-sec d-none">
+<section class="join-journey-section hm-join-journey-sec">
   <div class="container-xlg">
     <div class="row">
       <div class="col-sm-12">
