modal desktop view done

--- a/themes/socialasset/a_ngo-profile.html
+++ b/themes/socialasset/a_ngo-profile.html
@@ -625,7 +625,14 @@
                             </div>
                         </div>
                         <div class="ncc-add-tag">
-                          
+                          <label>Add Tags</label>
+                          <div>
+                            <input type="text" name="" placeholder="Add comma between tags. (e.g: sea, turtle, pollution)">
+                          </div>
+                        </div>
+                        <div class="ncc-submit-btns">
+                          <button>PREVIEW</button>
+                          <input type="submit" name="" value="Submit">
                         </div>
                       </div>
                     </form>
