--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -73,6 +73,30 @@
               </div>
               
             </div>
+            <div class="humberger-menu">
+              <ul class="clearfix ulc">
+                <li><a href="#">Humanity</a></li>
+                <li><a href="#">Animals</a></li>
+                <li><a href="#">Environment</a></li>
+                <li><a href="#">Health</a></li>
+                <li><a href="#">Education</a></li>
+              </ul>
+              <ul class="clearfix ulc">
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+              <div class="languages-area">
+                <label>Languages:</label>
+                <div class="site-lang-holder clearfix">
+                  <div class="site-lang">
+                    <a href="#" class="active">En <span class="ede-down-angle"></span></a>
+                    <a href="#">Gr</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
