--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -113,7 +113,7 @@
                         <img src="assets/images/sa-banner-cam-img.png">
                       </div>
                       <div class="sa-banner-cam-des">
-                        <a href="#" class="action">Actionaid</a>
+                        <span>Actionaid</span>
                         <strong>Clean South Crete</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem<br> ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <a href="#" class="campaign">VIEW CAMPAIGN</a>
@@ -154,7 +154,7 @@
                         <img src="assets/images/sa-banner-cam-img.png">
                       </div>
                       <div class="sa-banner-cam-des">
-                        <a href="#" class="action">Actionaid</a>
+                        <span>Actionaid</span>
                         <strong>Clean South Crete</strong>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Curabitur et risus libero. Vestibulum ante ipsum primis. Lorem<br> ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <a href="#" class="campaign">VIEW CAMPAIGN</a>
@@ -300,11 +300,13 @@
           <ul class="ulc clearfix">
             <li>
               <div class="sa-cam-grd-item">
-                <div class="sa-cam-grd-item-img" style="background: url('assets/images/sa-cam-grid-item-1.png');">
-                  <div class="sa-cam-grd-item-des-wrap">
-                    <div class="sa-cam-grd-item-des">
-                      <h3>Environment <br> Campaigns</h3>
-                      <span>12 opened</span>
+                <div class="sa-cam-grd-item-img-ctlr">
+                  <div class="sa-cam-grd-item-img" style="background: url('assets/images/sa-cam-grid-item-1.png');">
+                    <div class="sa-cam-grd-item-des-wrap">
+                      <div class="sa-cam-grd-item-des">
+                        <h3>Environment <br> Campaigns</h3>
+                        <span>12 opened</span>
+                      </div>
                     </div>
                   </div>
                 </div>
