--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -44,7 +44,7 @@
             <!-- 
               If you want logged navbar. please use the class on '.hdr-rgt .logged-menu'
              -->
-            <div class="hdr-rgt logged-menu">
+            <div class="hdr-rgt">
               <nav class="main-nav logout-main-nav">
                 <div class="main-nav-menu">
                   <ul class="clearfix ulc">
