--- a/themes/socialasset/user-campaign-list-page.html
+++ b/themes/socialasset/user-campaign-list-page.html
@@ -198,14 +198,9 @@
             <div class="campaigns-filters-area clearfix">
               <div class="clearfix campaigns-slect-filters">
                 <div class="campaigns-slect-filters-lft">
-                  <div class="sa-selctpicker-ctlr">
-                    <select class="selectpicker" data-size="7" data-live-search="true">
-                        <option selected="selected">Search by Name</option>
-                        <option>Save Lives in Ethiopia</option>
-                        <option>Clean South Crete</option>
-                        <option>Salamamina - Oil Spoil </option>
-                        <option>Τree planting - Athens</option>
-                    </select>
+                  <div class="search-by-name">
+                    <input type="search" name="">
+                    <button><i class="fas fa-search"></i></button>
                   </div>
                 </div>
                 <div class="campaigns-slect-filters-rgt">
