--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -31,7 +31,7 @@
 
 </head>
 <body>
-<header class="header d-none">
+<header class="header">
   <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
