--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -136,7 +136,7 @@
         </div>
       </div>
   </div>
-</header
+</header>
 
 <section class="page-banner has-button">
   <div class="sa-slider-wrap">
@@ -318,7 +318,9 @@
       <div class="col-sm-12">
         <div class="sa-user-section-inner">
           <div class="sa-user-section-img" style="background: url('assets/images/wwd-user-sec-img.png');">
-            <div class="sa-user-right">
+            
+          </div>
+          <div class="sa-user-right">
               <div class="sa-usr-rgt-des-wrap">
                 <div class="sa-usr-rgt-des">
                   <h3>For Users</h3>
@@ -327,7 +329,6 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
