home page fixing

--- a/themes/socialasset/front-page.html
+++ b/themes/socialasset/front-page.html
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col-12">
             <div class="hm-banner-slider-item-innr">
-              <h2>The Interface between <span class="bus">Business</span> and <span class="soc">Social</span> Problems</h2>
+              <h2>The Interface between  <br><span class="bus">Business</span> and <span class="soc">Social</span> Problems</h2>
               <a href="#">CREATE ACCOUNT</a>
             </div>
           </div>
@@ -329,7 +329,8 @@
         </div>
       </div>
     </div>
-  </div>  
+  </div> 
+  <span class="hm-wc-social-assets-top-shape"></span> 
 </section>
 
 <section class="hm-explore-campaigns-sec">
