a_user-profile.html jquery fix start

--- a/themes/socialasset/a_login-register.html
+++ b/themes/socialasset/a_login-register.html
@@ -156,10 +156,10 @@
                   <span>Already have an account? <a href="#">Sign in here</a></span>
                 </div>
                 <div class="register-type-btn">
-                  <button class="register-ngo-btn">
+                  <a href="javascript:void(0)" class="register-ngo-btn">
                     I’m NGO - <span>BeSupported</span>
-                  </button>
-                  <button class="register-supporter-btn">I’m Supporter</button>
+                  </a>
+                  <a href="javascript:void(0)" class="register-supporter-btn">I’m Supporter</a>
                 </div>
                 <div class="register-type-con">
                     <div class="register-type-select">
