--- a/themes/socialasset/a_user-profile.html
+++ b/themes/socialasset/a_user-profile.html
@@ -162,11 +162,18 @@
                           <div class="profile-img">
                             <img src="assets/images/img_avatar.png">
                           </div>
+                          <div class="profile-img-edit">
+                            <input type="file" name="" value="" id="choose-file">
+                            <label for="choose-file">
+                              <i><img src="assets/images/plus-icon-2.png"></i>
+                            </label>
+                          </div>
                           <strong>George Malamatlis</strong>
                           <span>George@webflow.gr</span>
                           <hr>
                           <div class="profile-submit-btn flx-btn-center">
-                            <input type="submit" name="" value="Edit Profile">
+                            <!-- <input type="submit" name="" value="Edit Profile"> -->
+                            <a href="javascript:void(0)">Edit Profile</a>
                           </div>
                         </div>
                       </div>
